fix(veiculo-card): adicionado console log do id do veiculo ao clique

--- a/src/app/components/veiculo-card/veiculo-card.html
+++ b/src/app/components/veiculo-card/veiculo-card.html
@@ -23,6 +23,6 @@
             <b class="cobranca-title">Total em cobranças</b>
             <label class="cobranca-description">R$ {{totalDeCobrancas().toFixed(2)}}</label>
         </section>
-        <button class="full-container btn outline" aria-label="Ver detalhes" (click)="moreInformation()">Ver detalhes</button>
+        <button class="full-container btn outline" aria-label="Ver detalhes" (click)="moreInformation(veiculo)">Ver detalhes</button>
     </mat-card-content>
 </mat-card>
