feat: Tudo que eu tenho

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -2,10 +2,9 @@
     <div class="logo">
         <!-- <div class="logo-img">
         </div> -->
-        <span>Estacionei</span>
+        <span>Estaciona Fácil</span>
     </div>
     <div class="user-info">
-    <div class="user-name">Marcos Souza</div>
     <div class="user-icon">👤</div>
     </div>
 </header>
