feat: tudo oq tenho

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -5,6 +5,7 @@
         <span>Estaciona Fácil</span>
     </div>
     <div class="user-info">
+        <span class="user-name">{{estacionamento.nome}}</span>
     <div class="user-icon">👤</div>
     </div>
 </header>
