--- a/src/app/components/veiculo-estacionado-info/tolerancia-estacionamento-info-card/estacionamento-info-card.html
+++ b/src/app/components/veiculo-estacionado-info/tolerancia-estacionamento-info-card/estacionamento-info-card.html
@@ -11,7 +11,7 @@
         <div>
           <p class="text-md text-blue">Tolerância de Saída</p>
           <p class="text-sm">
-            Você tem {{ estacionamento.minutosTolerancia ?? 0 }} minutos após o pagamento para sair sem taxas adicionais.
+            Você tem {{ estacionamento.minutosTolerancia }} minutos após o pagamento para sair sem taxas adicionais.
           </p>
         </div>
       </div>
