--- a/src/app/components/veiculo-estacionado-info/veiculo-estacionado-info.html
+++ b/src/app/components/veiculo-estacionado-info/veiculo-estacionado-info.html
@@ -25,12 +25,12 @@
 
     <!-- Tarifa -->
     <div>
-      <valor-estacionamento-info-card [estacionamentoId]="registro.estacionamentoId"/>
+      <valor-estacionamento-info-card [registro]="registro"/>
     </div>
 
     <!-- Tolerância -->
     <div>
-      <estacionamento-info-card [estacionamentoId]="registro.estacionamentoId" />
+      <estacionamento-info-card [registro]="registro" />
     </div>
 
     <!-- Botões -->
