--- a/src/app/components/veiculo-estacionado-info/valor-estacionamento-info-card/valor-estacionamento-info-card.html
+++ b/src/app/components/veiculo-estacionado-info/valor-estacionamento-info-card/valor-estacionamento-info-card.html
@@ -1,6 +1,6 @@
 <div class="card gradient-green">
   <div style="display: flex; align-items: baseline;justify-content: space-between; gap: 0.5rem;">
-    <p class="text-md">Tarifa por Minuto</p>
-    <p class="text-xl text-green">R$ {{ estacionamento.mtrValorHora }}</p>
+    <p class="text-md">Valor Estacionamento(Até agora...)</p>
+    <p class="text-xl text-green">R$ {{ calcularValorEstacionamento() }}</p>
   </div>
 </div>
